--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -1,32 +1,30 @@
-name: Android Sample
-
-on:
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
-  workflow_dispatch:
-
 jobs:
   buildTest:
     name: Build JDK ${{ matrix.java_version }}
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
+    steps:
+    - continue-on-error: true
+      name: Setup Maven Action
+      uses: s4u/setup-maven-action@v1.8.0
+      with:
+        checkout-fetch-depth: 0
+        java-distribution: temurin
+        java-version: ${{ matrix.java_version }}
+        maven-version: 3.8.7
+    - continue-on-error: true
+      name: Install Android SDK
+      uses: malinskiy/action-android/install-sdk@release/0.1.1
+    - continue-on-error: true
+      name: Install latest jsonschema2pojo SNAPSHOT
+      run: mvn -U -B install -DskipTests -Dmaven.javadoc.skip -Dmaven.site.skip
+    - continue-on-error: true
+      name: Build projects
+      run: cd jsonschema2pojo-gradle-plugin/example/android && ./gradlew --info assembleDebug
     strategy:
       matrix:
-        java_version: [8]
-    steps:
-      - name: Setup Maven Action
-        uses: s4u/setup-maven-action@v1.8.0
-        with:
-          checkout-fetch-depth: 0
-          java-version: ${{ matrix.java_version }}
-          java-distribution: temurin
-          maven-version: 3.8.7
-      - name: Install Android SDK
-        uses: malinskiy/action-android/install-sdk@release/0.1.1
-      - name: Install latest jsonschema2pojo SNAPSHOT
-        run: mvn -U -B install -DskipTests -Dmaven.javadoc.skip -Dmaven.site.skip
-      - name: Build projects
-        run: cd jsonschema2pojo-gradle-plugin/example/android && ./gradlew --info assembleDebug
+        java_version:
+        - 8
+name: Android Sample
+on:
+  repository_dispatch:
+    types: trigger-ga___android-ci.yml
