--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,30 +1,25 @@
----
-name: CI
-
-on:
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
-  workflow_dispatch:
-
 jobs:
   test:
-    runs-on: ubuntu-latest
+    name: Test JDK ${{ matrix.java_version }}
+    runs-on: self-hosted
+    steps:
+    - continue-on-error: true
+      name: Setup Maven Action
+      uses: s4u/setup-maven-action@v1.8.0
+      with:
+        checkout-fetch-depth: 0
+        java-distribution: temurin
+        java-version: ${{ matrix.java_version }}
+        maven-version: 3.8.7
+    - continue-on-error: true
+      name: Verify with Maven
+      run: mvn verify -B
     strategy:
       matrix:
-        java_version: [8]
+        java_version:
+        - 8
       max-parallel: 4
-    name: Test JDK ${{ matrix.java_version }}
-    steps:
-      - name: Setup Maven Action
-        uses: s4u/setup-maven-action@v1.8.0
-        with:
-          checkout-fetch-depth: 0
-          java-version: ${{ matrix.java_version }}
-          java-distribution: temurin
-          maven-version: 3.8.7
-      - name: Verify with Maven
-        run: mvn verify -B
+name: CI
+on:
+  repository_dispatch:
+    types: trigger-ga___ci.yml
